--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ Pillow==8.1.1
 progressbar==2.5
 pyparsing==2.4.7
 python-dateutil==2.8.1
+python-memcached==1.59
 pytz==2020.5
 requests==2.25.1
 schedule==1.0.0
